--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -6,6 +6,10 @@
 <BODY>
  
 <H1 align = "centre"> INTRODUCTION TO IT ASSIGNMENT 1 </H1>
-<img src = "div.jpg" alt = "div" width = "80" height = "100"0>
+<HR>
+<img src = "div.jpg" alt = "div" width = "80" height = "100"0 style="float:right;">
+
+<p>This is the start of my work...</p>
+
 </BODY>
 </HTML>
