--- a/index.html
+++ b/index.html
@@ -1,15 +1,116 @@
 <!DOCTYPE html>
 <HTML>
 <HEAD>
+<style>
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    border: 1px solid #e7e7e7;
+    background-color: #333;
+  }
+  li {
+  float: left;
+}
+
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  background-color: #dddddd;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: #111;
+}
+
+.active {
+  background-color: #04AA6D;
+}
+
+.p1 {
+  font-family: "Times New Roman", Times, serif;
+  font-size: 50px;
+}
+
+</style>
+
 <TITLE> IT ASSIGNMENT 1 </TITLE>
 </HEAD>
-<BODY>
+
+
+<BODY style="background-color:powderblue;">
  
-<H1 align = "centre"> INTRODUCTION TO IT ASSIGNMENT 1 </H1>
+<H1 align = "center"> INTRODUCTION TO IT ASSIGNMENT 1 </H1>
 <HR>
 <img src = "div.jpg" alt = "div" width = "80" height = "100"0 style="float:right;">
 
-<p>This is the start of my work...</p>
+<ul>
+    <li><a class="active" href="#Introduction">Introduction</a></li>
+    <li><a href="#Ideal Job">IdealJob</a></li>
+    <li><a href="#Personal Profile">Personal Profile</a></li>
+    <li><a href="#PROJECT IDEA">Project Idea</a></li>
+  </ul>
+  
+<p><i><strong>
+  Student Name: Divyanshi Bhasin <br>
+  Student ID: 3959447 <br>
+  Student email: s3959447@student.rmit.edu.au  <br>
+  Mobile: +61 475 197 192 <BR>
+  GitHub URL: https://github.com/divyanshi395/divyanshi395.github.io <br>
+  GitHub pages URL: https://divyanshi395.github.io/ <br>
+  <hr>
+  
+
+</p></strong></i>
+
+
+<h2>Personal Information</h2>
+
+<p>I’m Divyanshi Bhasin, a 17-year-old Indian who loves to read and explore new places.<br>
+   My forte is swimming and I’ve won several laurels in that. I completed my high school at Sri Venkateshwar <br>
+   International School, Dwarka, New Delhi, India, and secured High Distinction in grade 12. I can read and <br>
+    speak English and Hindi fluently. 
+
+</p>
+<BR>
+<H3>Intriguing facts about me: </H3>
+ <P>Technology interests me a lot. I try and keep up with the updates as much as I can. <BR>
+  I own a pet dog whose name is Shiro. He’s one year old and I miss him the most here. </P>
+
+
+  <H2>Interest in IT:</H2>
+<P>
+    My interest in IT starts way back when I was in middle school. I was introduced to the computer language <BR>
+    and programming for the first time then. It caught my interest from the start itself. Therefore, I got my <BR>
+    first laptop when I was twelve. There was no coming back from there. I would study all the chapters before<BR>
+    my tutor and would try to do the practice on my laptop. I became a tech enthusiast and hence topped the <BR>
+    subject. Internet and networks would always trigger my curiosity and made me question how an invisible thing <br>
+    can transfer data, perform bank transfers, and communicate with people who live poles apart. My uncle who has <br>
+    worked for IBM, Microsoft, and KPMG and now working with MetLife would always help me clear my queries and <br>
+    teach me something new about tech every day.<br>
+    Nowadays, most of our day-to-day tasks and chores involve technology. Many tasks related to work and personal life have<br>
+    been made easier and more productive with technology. The fact that we have wearable tech, storage for 100+ books in our kindle, <br>
+    and our timetable for each day sorted in our mobile phones overwhelms me. When I taught my grandma to order groceries while <br>
+    sitting in her living room and receiving them in no time made me realize that it is a great sense of satisfaction for an IT <br>
+    consultant to persuade people to adopttechnology that simplifies things for them. <br>
+    RMIT was my first preference university as it is one of the high ranked universities in Australia, especially in technology-based courses. <br>
+    Combining theory and project experience, an IT qualification from RMIT gives you the skills to develop IT infrastructures and support the people <br>
+    who use them - from network and data administration, programming, and client support, to specialized skills to lead innovation in IT. It is also <br>
+    known for its innovative teaching model which develops programming skills in students through practical and project-based work. Programs here are <br>
+    lively, interactive, and relevant to the international technology world. Superb facility and learning environments include world-class learning resources<br>
+    and industry expert tutors. Student support here is one of the essential features including friendly staff to guide the students. It also includes the conduct <br>
+    of a wide range of events and competitions to engage the students throughout and provide them with relevant exposure. <br>
+    Furthermore, I loved the fact that it focuses on the future employability of students, with a range of industry-leading projects <br>
+    preparing graduates for their future careers. I expect to learn major branches of IT in this course. I also think that it’ll sharpen <br>
+    skills like critical thinking, problem-solving, analysis, communication, teamwork, etc.<br>
+    Hence, I prefer learning the core subject than a part of it since it opens the doors to all opportunities in the course.
+    
+</P>
 
 </BODY>
 </HTML>
