--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <style>
-ul {
+.topnav {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -10,21 +10,22 @@ ul {
     border: 1px solid #e7e7e7;
     background-color: #333;
   }
-  li {
+  
+  
+
+
+.topnav a {
   float: left;
-}
-
-
-li a {
   display: block;
   color: white;
   text-align: center;
   padding: 14px 16px;
   background-color: #dddddd;
   text-decoration: none;
+  width: 22%;
 }
 
-li a:hover:not(.active) {
+.topnav a:hover:not(.active) {
   background-color: #111;
 }
 
@@ -47,14 +48,14 @@ li a:hover:not(.active) {
  
 <H1 align = "center"> INTRODUCTION TO IT ASSIGNMENT 1 </H1>
 <HR>
-<img src = "div.jpg" alt = "div" width = "80" height = "100"0 style="float:right;">
 
-<ul>
-    <li><a class="active" href="#Introduction">Introduction</a></li>
-    <li><a href="#Ideal Job">IdealJob</a></li>
-    <li><a href="#Personal Profile">Personal Profile</a></li>
-    <li><a href="#PROJECT IDEA">Project Idea</a></li>
-  </ul>
+<img src = "div.jpg" alt = "div" width = "80" height = "100"0 style="float:right;">
+<div class = "topnav">
+  <a class="active" href="index.html">Introduction</a>
+  <a href="idealjob.html">IdealJob</a>
+  <a href="#Personal Profile">Personal Profile</a>
+  <a href="#PROJECT IDEA">Project Idea</a>
+</div>
   
 <p><i><strong>
   Student Name: Divyanshi Bhasin <br>
@@ -62,14 +63,15 @@ li a:hover:not(.active) {
   Student email: s3959447@student.rmit.edu.au  <br>
   Mobile: +61 475 197 192 <BR>
   GitHub URL: https://github.com/divyanshi395/divyanshi395.github.io <br>
-  GitHub pages URL: https://divyanshi395.github.io/ <br>
+  GitHub pages URL: https://divyanshi395.github.io/
+
   <hr>
   
 
 </p></strong></i>
 
 
-<h2>Personal Information</h2>
+<h2><u>Personal Information:</u></h2>
 
 <p>I’m Divyanshi Bhasin, a 17-year-old Indian who loves to read and explore new places.<br>
    My forte is swimming and I’ve won several laurels in that. I completed my high school at Sri Venkateshwar <br>
@@ -83,7 +85,7 @@ li a:hover:not(.active) {
   I own a pet dog whose name is Shiro. He’s one year old and I miss him the most here. </P>
 
 
-  <H2>Interest in IT:</H2>
+  <H2><u>Interest in IT:</H2></u>
 <P>
     My interest in IT starts way back when I was in middle school. I was introduced to the computer language <BR>
     and programming for the first time then. It caught my interest from the start itself. Therefore, I got my <BR>
@@ -93,11 +95,11 @@ li a:hover:not(.active) {
     can transfer data, perform bank transfers, and communicate with people who live poles apart. My uncle who has <br>
     worked for IBM, Microsoft, and KPMG and now working with MetLife would always help me clear my queries and <br>
     teach me something new about tech every day.<br>
-    Nowadays, most of our day-to-day tasks and chores involve technology. Many tasks related to work and personal life have<br>
+    <p>Nowadays, most of our day-to-day tasks and chores involve technology. Many tasks related to work and personal life have<br>
     been made easier and more productive with technology. The fact that we have wearable tech, storage for 100+ books in our kindle, <br>
     and our timetable for each day sorted in our mobile phones overwhelms me. When I taught my grandma to order groceries while <br>
     sitting in her living room and receiving them in no time made me realize that it is a great sense of satisfaction for an IT <br>
-    consultant to persuade people to adopttechnology that simplifies things for them. <br>
+    consultant to persuade people to adopttechnology that simplifies things for them. <br></p>
     RMIT was my first preference university as it is one of the high ranked universities in Australia, especially in technology-based courses. <br>
     Combining theory and project experience, an IT qualification from RMIT gives you the skills to develop IT infrastructures and support the people <br>
     who use them - from network and data administration, programming, and client support, to specialized skills to lead innovation in IT. It is also <br>
