--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 <div class = "topnav">
   <a class="active" href="index.html">Introduction</a>
   <a href="idealjob.html">IdealJob</a>
-  <a href="#Personal Profile">Personal Profile</a>
-  <a href="#PROJECT IDEA">Project Idea</a>
+  <a href="personalprofile.html">Personal Profile</a>
+  <a href="projectidea.html">Project Idea</a>
 </div>
-  
+  <font size="+2" COLOR="PURPLE">
 <p><i><strong>
   Student Name: Divyanshi Bhasin <br>
   Student ID: 3959447 <br>
@@ -64,12 +64,12 @@
   Mobile: +61 475 197 192 <BR>
   GitHub URL: https://github.com/divyanshi395/divyanshi395.github.io <br>
   GitHub pages URL: https://divyanshi395.github.io/
-
+  </FONT>
   <hr>
   
 
 </p></strong></i>
-
+<FONT SIZE="+2">
 
 <h2><u>Personal Information:</u></h2>
 
@@ -84,8 +84,9 @@
  <P>Technology interests me a lot. I try and keep up with the updates as much as I can. <BR>
   I own a pet dog whose name is Shiro. He’s one year old and I miss him the most here. </P>
 
-
+<hr>
   <H2><u>Interest in IT:</H2></u>
+  
 <P>
     My interest in IT starts way back when I was in middle school. I was introduced to the computer language <BR>
     and programming for the first time then. It caught my interest from the start itself. Therefore, I got my <BR>
@@ -97,22 +98,25 @@
     teach me something new about tech every day.<br>
     <p>Nowadays, most of our day-to-day tasks and chores involve technology. Many tasks related to work and personal life have<br>
     been made easier and more productive with technology. The fact that we have wearable tech, storage for 100+ books in our kindle, <br>
-    and our timetable for each day sorted in our mobile phones overwhelms me. When I taught my grandma to order groceries while <br>
-    sitting in her living room and receiving them in no time made me realize that it is a great sense of satisfaction for an IT <br>
-    consultant to persuade people to adopttechnology that simplifies things for them. <br></p>
+    and our timetable for each day sorted in our mobile phones overwhelms me. In fact, during the pandemic and lockdown, it was the IT <br>
+    industry that boomed. It was the industry which proved that people can work equally efficiently from the comfort of their homes. <br>
+    The shift of other sectors such as education or medical to online was made possible by IT.
+    <p>When I taught my grandma to order groceries while sitting in her living room and receiving them in no time made me realize that <br>
+      it is a great sense of satisfaction for an IT consultant to persuade people to adopttechnology that simplifies things for them. <br></p>
     RMIT was my first preference university as it is one of the high ranked universities in Australia, especially in technology-based courses. <br>
-    Combining theory and project experience, an IT qualification from RMIT gives you the skills to develop IT infrastructures and support the people <br>
-    who use them - from network and data administration, programming, and client support, to specialized skills to lead innovation in IT. It is also <br>
-    known for its innovative teaching model which develops programming skills in students through practical and project-based work. Programs here are <br>
-    lively, interactive, and relevant to the international technology world. Superb facility and learning environments include world-class learning resources<br>
-    and industry expert tutors. Student support here is one of the essential features including friendly staff to guide the students. It also includes the conduct <br>
-    of a wide range of events and competitions to engage the students throughout and provide them with relevant exposure. <br>
+    Combining theory and project experience, an IT qualification from RMIT gives you the skills to develop IT infrastructures and support the<br>
+    people who use them - from network and data administration, programming, and client support, to specialized skills to lead innovation in <br>
+    IT. It is also known for its innovative teaching model which develops programming skills in students through practical and project-based work.  <br>
+    Programs here are lively, interactive, and relevant to the international technology world. Superb facility and learning environments include <br>
+    world-class learning resources and industry expert tutors. Student support here is one of the essential features including friendly staff to  <br>
+    guide the students. It also includes the conduct of a wide range of events and competitions to engage the students throughout and provide <br>
+    them with relevant exposure. <br>
     Furthermore, I loved the fact that it focuses on the future employability of students, with a range of industry-leading projects <br>
     preparing graduates for their future careers. I expect to learn major branches of IT in this course. I also think that it’ll sharpen <br>
     skills like critical thinking, problem-solving, analysis, communication, teamwork, etc.<br>
     Hence, I prefer learning the core subject than a part of it since it opens the doors to all opportunities in the course.
     
-</P>
+</P></font>
 
 </BODY>
 </HTML>
