--- a/idealjob.html
+++ b/idealjob.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <HTML>
-<HEAD> <H1 align="center"><U>IDEAL JOB</H1></U>
+<HEAD> <H1 align="center"><font size="+4" color="MAROON"><U>IDEAL JOB</H1></U></font>
 <style>
 .p1 {
   font-family: "Times New Roman", Times, serif;
-  font-size: 500px;
+  font-size: 100px;
 }
 </style>
 <title>IdealJob</title>
@@ -36,6 +36,7 @@ job duties include searching through marketing analytics data, developing report
 analysed, and presenting your findings back to the marketing managers.
 </p></font>
 <br>
+<hr>
 <p><u><i><strong><font size="+2">Qualifications and skills required:</p></font></i></u></strong>
 
 <ul><font size="+2"; color="blue">
@@ -101,5 +102,3 @@ analysed, and presenting your findings back to the marketing managers.
 
 </BODY>
 </HTML>
-
-    
